--- a/Dockerfile.deepfakedetector
+++ b/Dockerfile.deepfakedetector
@@ -1,9 +1,9 @@
-FROM continuumio/miniconda
+FROM continuumio/miniconda3
 
 USER root
 
 ## os dependencies
-RUN apt-get update &&\
+RUN apt-get --allow-releaseinfo-change update &&\
     apt-get install -y build-essential jq &&\
     pip install yq
 
