--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,12 @@
 name: deepfakedetector
 dependencies:
+- python=3.7
 - jupyterlab=0.35.4
 - pyviz/label/dev::pyviz=0.10.0
 - pyviz/label/dev::hvplot=0.4.0
 - pip
 - pip:
-    - tensorflow==2.0.0-beta1
+    - tensorflow==2.0.0
     - stingray
     - sklearn
     - jupyter
