trying new combination to avoid errors

--- a/Dockerfile.deepfakedetector
+++ b/Dockerfile.deepfakedetector
@@ -3,7 +3,7 @@ FROM continuumio/miniconda
 USER root
 
 ## os dependencies
-RUN apt-get update &&\
+RUN apt-get --allow-releaseinfo-change update &&\
     apt-get install -y build-essential jq &&\
     pip install yq
 
