--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
 - pyviz/label/dev::hvplot=0.4.0
 - pip
 - pip:
+    - ipynbname
     - tensorflow==2.0.0
     - stingray
     - sklearn
